@@ -6,7 +6,7 @@
 
 	<groupId>com.microsoft.sqlserver</groupId>
 	<artifactId>mssql-jdbc</artifactId>
-	<version>9.4.0</version>
+	<version>10.3.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>Microsoft JDBC Driver for SQL Server</name>
@@ -43,6 +43,7 @@
 		<!-- Allowed values for excluded Groups here - - - - - - - - - - - - - 
 			xJDBC42 - - - - - - For tests not compatible with JDBC 42 Specifications 
 			xGradle - - - - - - For tests not compatible with Gradle Script - - - - - 
+			xSQLv11 - - - - - - For tests not compatible with SQL Server 2012
 			xSQLv12 - - - - - - For tests not compatible with SQL Server 2008 R2 - 2014 
 			xSQLv14 - - - - - - For tests not compatible with SQL Server 2016 - 2017 
 			xSQLv15 - - - - - - For tests not compatible with SQL Server 2019 - - - - 
@@ -56,28 +57,27 @@
 			Default testing enabled with SQL Server 2019 (SQLv15) -->
 		<excludedGroups>xSQLv12,xSQLv15,NTLM,MSI,reqExternalSetup,clientCertAuth,fedAuth</excludedGroups>
 
-		<!-- Use -preview for preview release, leave empty for official release.-->
-		<releaseExt></releaseExt>
+		<!-- Use -preview for preview release, leave empty for official release. -->
+		<releaseExt>-preview</releaseExt>
 
 		<!-- Driver Dependencies -->
-		<azure.keyvault.version>4.2.8</azure.keyvault.version>
-		<azure.identity.version>1.3.3</azure.identity.version>
 		<osgi.core.version>6.0.0</osgi.core.version>
+		<azure.keyvault.version>4.3.6</azure.keyvault.version>
+		<azure.identity.version>1.4.3</azure.identity.version>
 		<osgi.comp.version>5.0.0</osgi.comp.version>
-		<antlr.runtime.version>4.9.2</antlr.runtime.version>
-		<google.gson.version>2.8.7</google.gson.version>
-		<bouncycastle.bcprov.version>1.69</bouncycastle.bcprov.version>
-		<bouncycastle.bcpkix.version>1.69</bouncycastle.bcpkix.version>
+		<antlr.runtime.version>4.9.3</antlr.runtime.version>
+		<google.gson.version>2.8.9</google.gson.version>
+		<bouncycastle.bcprov.version>1.70</bouncycastle.bcprov.version>
+		<bouncycastle.bcpkix.version>1.70</bouncycastle.bcpkix.version>
 
 		<!-- JUnit Test Dependencies -->
-		<azure.adal4j.version>1.6.7</azure.adal4j.version>
 		<junit.platform.version>[1.3.2, 1.5.2]</junit.platform.version>
 		<junit.jupiter.version>5.5.2</junit.jupiter.version>
 		<hikaricp.version>3.4.2</hikaricp.version>
 		<dbcp2.version>2.7.0</dbcp2.version>
 		<slf4j.nop.version>1.7.30</slf4j.nop.version>
 		<gemini.mock.version>2.1.0.RELEASE</gemini.mock.version>
-		<h2.version>1.4.200</h2.version>
+		<h2.version>2.1.210</h2.version>
 
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>${project.build.sourceEncoding}</project.reporting.outputEncoding>
@@ -147,12 +147,6 @@
 		</dependency>
 
 		<!-- dependencies for running tests -->
-		<dependency>
-			<groupId>com.microsoft.azure</groupId>
-			<artifactId>adal4j</artifactId>
-			<version>${azure.adal4j.version}</version>
-			<scope>test</scope>
-		</dependency>
 		<dependency>
 			<groupId>org.junit.platform</groupId>
 			<artifactId>junit-platform-console</artifactId>
@@ -251,8 +245,15 @@
 						<version>3.8.0</version>
 						<configuration>
 							<excludes>
+								<exclude>**/com/microsoft/sqlserver/jdbc/ISQLServerConnection43.java</exclude>
+								<exclude>**/com/microsoft/sqlserver/jdbc/SQLServerConnection43.java</exclude>
 								<exclude>**/com/microsoft/sqlserver/jdbc/SQLServerJdbc43.java</exclude>
 							</excludes>
+							<testExcludes>
+								<exclude>**/com/microsoft/sqlserver/jdbc/connection/ConnectionWrapper43Test.java</exclude>
+								<exclude>**/com/microsoft/sqlserver/jdbc/connection/RequestBoundaryMethodsTest.java</exclude>
+								<exclude>**/com/microsoft/sqlserver/jdbc/JDBC43Test.java</exclude>
+							</testExcludes>
 							<source>1.8</source>
 							<target>1.8</target>
 						</configuration>
@@ -281,8 +282,6 @@
 						<configuration>
 							<!-- Exclude [xJDBC42] For tests not compatible with JDBC 4.2 Specifications -->
 							<excludedGroups>${excludedGroups}, xJDBC42</excludedGroups>
-							<!-- needs to be overridden as illegal-access and MaxPermSize=256m not valid in java 8 -->
-							<argLine>-Xmx1024m -Djava.library.path=${dllPath}</argLine>
 						</configuration>
 					</plugin>
 				</plugins>
@@ -322,12 +321,12 @@
 			</build>
 		</profile>
 		<profile>
-			<id>jre16</id>
+			<id>jre17</id>
 			<activation>
 				<activeByDefault>true</activeByDefault>
 			</activation>
 			<build>
-				<finalName>${project.artifactId}-${project.version}.jre16${releaseExt}</finalName>
+				<finalName>${project.artifactId}-${project.version}.jre17${releaseExt}</finalName>
 				<plugins>
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
@@ -337,8 +336,8 @@
 							<excludes>
 								<exclude>**/com/microsoft/sqlserver/jdbc/SQLServerJdbc42.java</exclude>
 							</excludes>
-							<source>16</source>
-							<target>16</target>
+							<source>17</source>
+							<target>17</target>
 						</configuration>
 					</plugin>
 					<plugin>
@@ -422,8 +421,7 @@
 				<configuration>
 					<forkCount>3</forkCount>
 					<reuseForks>true</reuseForks>
-					<argLine>${argLine} --illegal-access=permit -Xmx1024m
-						-XX:MaxPermSize=256m -Djava.library.path=${dllPath}
+					<argLine>${argLine} -Xmx1024m -Djava.library.path=${dllPath}
 					</argLine>
 					<excludedGroups>${excludedGroups}</excludedGroups>
 				</configuration>
@@ -499,7 +497,7 @@
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>0.8.6</version>
+				<version>0.8.7</version>
 				<executions>
 					<execution>
 						<id>pre-test</id>
@@ -508,19 +506,23 @@
 						</goals>
 					</execution>
 					<execution>
-						<id>report</id>
-						<phase>test</phase>
-						<goals>
-							<goal>report</goal>
-						</goals>
-					</execution>
+				        <id>default-report</id>
+				        <phase>prepare-package</phase>
+				        <goals>
+				            <goal>report</goal>
+				        </goals>
+				    </execution>
 				</executions>
 				<configuration>
+					<excludes>
+						<exclude>**/mssql/googlecode/**/*</exclude>
+						<exclude>**/mssql/security/**/*</exclude>
+					</excludes>
 					<fileSets>
 						<fileSet>
 							<directory>jacoco-execs/</directory>
 							<includes>
-								<include>*.exec</include>
+								<include>**/*.exec</include>
 							</includes>
 						</fileSet>
 					</fileSets>
